[package]
name = "outlier"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"

# Web server dependencies
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", features = ["multipart"], optional = true }
bytes = { version = "1", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# OpenAPI/Swagger dependencies
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

[features]
default = []
server = ["tokio", "axum", "bytes", "tower", "tower-http", "tracing", "tracing-subscriber", "utoipa", "utoipa-swagger-ui"]

[package.metadata.release]
# Don't publish to crates.io (this is a standalone tool)
publish = false
# Push to git after tagging
push = true
# Create and push git tag
tag = true
# Tag prefix
tag-prefix = "v"
# Sign tags
sign-tag = false
# Pre-release replacements in CHANGELOG.md
pre-release-replacements = [
  {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly=1},
]
