[package]
name = "outlier"
version = "0.2.3"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"

# Telemetry dependencies (Honeycomb via OpenTelemetry)
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "tls-roots"] }
tracing-opentelemetry = "0.28"
tonic = { version = "0.12", features = ["tls-roots"] }

# Web server dependencies
axum = { version = "0.7", features = ["multipart"], optional = true }
bytes = { version = "1", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# OpenAPI/Swagger dependencies
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

[features]
default = []
server = ["axum", "bytes", "tower", "tower-http", "utoipa", "utoipa-swagger-ui"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[package.metadata.release]
# Don't publish to crates.io (this is a standalone tool)
publish = false
# Push to git after tagging
push = true
# Create and push git tag
tag = true
# Tag prefix
tag-prefix = "v"
# Sign tags
sign-tag = false
# Pre-release replacements in CHANGELOG.md
pre-release-replacements = [
  {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly=1},
]
