[package]
name = "outlier"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0.101"

# Telemetry dependencies (Honeycomb via OpenTelemetry)
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tls-roots"] }
tracing-opentelemetry = "0.32"
tonic = { version = "0.14", features = ["tls-native-roots"] }

# Web server dependencies
axum = { version = "0.8", features = ["multipart"], optional = true }
bytes = { version = "1", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# Configuration
toml = { version = "1.0", optional = true }

# OpenAPI/Swagger dependencies
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

[features]
default = []
server = ["axum", "bytes", "tower", "tower-http", "toml", "utoipa", "utoipa-swagger-ui"]

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
http-body-util = "0.1"

[package.metadata.release]
# Don't publish to crates.io (this is a standalone tool)
publish = false
# Push to git after tagging
push = true
# Create and push git tag
tag = true
# Tag name pattern (default includes extra "v", so we override)
tag-name = "v{{version}}"
# Sign tags
sign-tag = false
# Pre-release replacements in CHANGELOG.md
pre-release-replacements = [
  {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly=1},
]
